[package]
name = "cargo-uwp"
version = "0.2.1"
authors = ["Tim Weis <tim.weis@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Custom Cargo command to create, manage, and package UWP applications"
repository = "https://github.com/tim-weis/cargo-uwp"
readme = "README.md"
keywords = ["windows", "uwp", "build-tools"]
categories = ["development-tools::cargo-plugins", "development-tools::build-utils"]
exclude = ["docs", "README.md", "CHANGELOG.md"]

[[bin]]
name = "cargo-uwp"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.42"
console = "0.15.0"
structopt = "0.3.22"
toml_edit = "0.2.1"
